@@ -42,6 +42,9 @@ Post v24.03.0
     true, the traffic destined to a logical port of a provider logical switch
     (having a localnet port) will be tunnelled instead of sending it via the
     localnet port.
+  - A new LSP option "disable_garp_rarp" has been added to prevent OVN from
+    sending GARP or RARP announcements when a VIF is created on a bridged
+    logical switch.
 
 OVN v24.03.0 - 01 Mar 2024
 --------------------------
